src/components/all_teams/all_teams.scss
.all-teams {
  min-width: 100%;
  height: 80vh;
  flex: 1 1 auto;
  display: block;
  justify-content: center;
  border: 1px solid black;
  margin: 0 7.5px 15px;
  overflow: hidden;
  padding-top: 20px;
  // background-color: red;


  .content {
    width: fit-content;
    padding: 0px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    // background-color: red;
    opacity: 1;
    position: relative;
    top: 0%;
    text-align: center;
    font-weight: bold;
    font-size: 22px;

    .title {
      color: #f8f5f5;
      padding: 5px;
      margin: 0;
      
    }
  }
  .team-menu {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}
}

@media screen and (min-width: 450px) {
  .all-teams {
    max-width: 1020px;
    height: 60vw;
    max-height: 600px;
    display: flex;
    flex-direction: column;
  }

  .content {
    margin: 0 auto;

  }
}

